--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "github-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://langpavel.github.io/github-client",
   "dependencies": {
     "@langpavel/graphiql": "^0.12.1-patch4",
     "graphql": "^14.0.2",
@@ -13,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -24,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
