--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "@langpavel/graphiql": "^0.12.1-patch5",
     "graphql": "^14.0.2",
-    "prettier": "^1.14.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "prettier": "^1.15.3",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2",
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
